<resources>
    <string name="app_name">Помощник слабовидящих</string>
    <string name="btn_gohome_text"><font size="128">Д</font>\n\<font size="12">(идем домой!)</font></string>
    <string name="btn_whereami_text"><font size="128">Г</font>\n\<font size="12">(где я?)</font></string>
    <string name="btn_drugstore_text"><font size="128">A</font>\n\<font size="12">(аптека)</font></string>
    <string name="btn_calldoctor_text"><font size="128">В</font>\n\<font size="12">(звонить врачу!)</font></string>
    <string name="btn_gohome_text_small"><font size="88">Д</font>\n\<font size="8">(домой)</font></string>
    <string name="btn_drugstore_text_small"><font size="88">A</font>\n\<font size="8">(аптека)</font></string>
    <string name="btn_whereami_text_small"><font size="88">Г</font>\n\<font size="8">(где я?)</font></string>
    <string name="btn_calldoctor_text_small"><font size="88">В</font>\n\<font size="8">(врач!)</font></string>
    <string name="btn_help_text_small"><font size="88">?</font></string>
    <string name="btn_no_func_text_compact"><font size="72">-</font></string>
    <string name="btn_bus_stop"><font size="72">О</font></string>
    <string name="btn_go_home_trans"><font size="72">T></font></string>
    <string name="title_activity_nav">Навигатор</string>
    <string name="title_activity_map">Карта</string>
    <string name="app_help">Здравствуйте! Данный помощник работает в двух режимах: экранной форме и механической. В первом случае вы можете увидеть  большую кнопку Дэ - пеший маршрут до дома, Тэ - маршрут на транспорте, Гэ - чтобы определить свое местоположение, Вэ - для вызова врача из телефонной книги, Аа - для поиска ближайших аптек, Оо - для поиска ближайших остановок.
Если у вас нет возможности увидеть данные кнопки, попробуйте воспользоваться клавишами громкости. Клавиша - вверх выбор действия, клавиша вниз - переключение на другое действие</string>

</resources>